Updating sending email using gmail api
old way was not working anymore

--- a/config.ini
+++ b/config.ini
@@ -4,10 +4,10 @@ LOG = PATH TO LOGFILE (EXAMPLE: /home/user/bazos/bazos.log)
 TIMESPAN = CHECK NEW ADDS NO OLDER THAN THIS VALUE (IN DAYS) (EXAMPLE: 2)
 
 [EMAIL]
-LOGIN = USERNAME
-PASSWORD = PASSWORD
-SERVER = SMTP SERVER
-PORT = SMTP PORT
+SENDER  = ADDRESS FROM SENDER EMAIL
+TOKEN_FILENAME = FILENAME OF TOKEN FILENAME
+CREDENTIALS_FILENAME =  CREDENTIAL FILENAME
+GMAIL_API = https://mail.google.com
 
 [EXAMPLE1]
 TITLE = EXAMPLE TITLE (EXAMPLE: skoda octavia)
